добавил создание календаря с месяцами из заданного диапазона

--- a/functions/Генератор периодов.md
+++ b/functions/Генератор периодов.md
@@ -17,3 +17,23 @@ AUTOGENERATE $(varCalendar_End_Date) - $(varCalendar_Start_Date) + 1;
 04.05.2022
 05.05.2022
 ```
+
+# Создание календаря с месяцами
+
+```
+LET varCalendar_Start_Date = NUM(MAKEDATE(2022,1,1));
+LET varCalendar_End_Date = NUM(MAKEDATE(2022,5,5));
+
+_tmp_newdates:
+LOAD DISTINCT
+    DATE(MONTHSTART($(varCalendar_Start_Date) + RowNo() - 1),'YYYY_MM') as _MonthStart
+AUTOGENERATE $(varCalendar_End_Date) - $(varCalendar_Start_Date) + 1;
+```
+Результатам выполнения будет поле **_MonthStart** со значениями:
+```
+2022_01
+2022_02
+2022_03
+2022_04
+2022_05
+```
