--- a/functions/Генератор периодов.md
+++ b/functions/Генератор периодов.md
@@ -55,7 +55,7 @@ AUTOGENERATE $(varCalendar_End_Date) - $(varCalendar_Start_Date) + 1;
 
 - CALL ls_GenericCalendar('' , num(makedate(2020)) , num(makedate(2022)-1) , '' , 'YYYY_MM' , 'month');
 
-создает таблицу "ls_GenericCalendar_Table", с полем "_GenericPeriodValue", в котором содержаться значения:
+создает таблицу "ls_GenericCalendar_Table", с полем "_GenericPeriodValue", в котором содержатся значения:
 ```
 2020_01
 2020_02
@@ -85,7 +85,7 @@ AUTOGENERATE $(varCalendar_End_Date) - $(varCalendar_Start_Date) + 1;
 
 - CALL ls_GenericCalendar('table' , num(makedate(2020)) , num(makedate(2022)-1) , '_years' , 'YYYY' , 'year');
 
-создает таблицу "table", с полем "_years", в котором содержаться значения:
+создает таблицу "table", с полем "_years", в котором содержатся значения:
 ```
 2020
 2021
@@ -93,7 +93,7 @@ AUTOGENERATE $(varCalendar_End_Date) - $(varCalendar_Start_Date) + 1;
 
 - CALL ls_GenericCalendar('_periodtable' , num(makedate(2020)) , num(makedate(2020,2)) , '_datestoload' , 'YYYY_MM_DD' , '');
 
-создает таблицу "_periodtable", с полем "_datestoload", в котором содержаться значения:
+создает таблицу "_periodtable", с полем "_datestoload", в котором содержатся значения:
 ```
 2020_01_01
 2020_01_02
