Разделяем строку с разделителем на 2 отдельных поля

--- a/functions/Как из поля со списком сделать строки.md
+++ b/functions/Как из поля со списком сделать строки.md
@@ -33,3 +33,32 @@ id, значение
 2, труба
 2, дверь
 ```
+
+# Разделяем строку с разделителем на 2 отдельных поля
+
+
+```
+SET varDelimiter = ',';
+SET varDelimiter2 = ':';
+
+tablename:
+LOAD * INLINE
+[id | список
+1 | отдел:тыква, сорт:банан, изделие:кокос
+2 | отдел:рябчик, сорт:труба, изделие:дверь
+] (delimiter is '|');
+
+newtable:
+LOAD
+	id
+    , SubField(строка, ':', iterno()) as param_name
+    , SubField(строка, ':', iterno()+1) as param_value
+WHILE ITERNO() <= SUBSTRINGCOUNT(строка, '$(varDelimiter2)');
+LOAD
+    id
+    , SUBFIELD(список, '$(varDelimiter)', ITERNO() ) as строка
+RESIDENT tablename
+WHILE ITERNO() <= SUBSTRINGCOUNT(список, '$(varDelimiter)') + 1;
+
+DROP TABLE tablename;
+```
