Update Как из поля со списком сделать строки.md

--- a/functions/Как из поля со списком сделать строки.md
+++ b/functions/Как из поля со списком сделать строки.md
@@ -36,6 +36,15 @@ id, значение
 
 # Разделяем строку с разделителем на 2 отдельных поля
 
+Предположим что у нас есть какое то поле id, и поле в таком виде: "отдел:тыква, сорт:банан, изделие:кокос"
+
+Нам необходимо разделить второе поле на 2 других, но при этом у нас строка состоит из названий параметров и значений этих параметров. Т.е. нужно получить данные в таком виде:
+```
+id, "тыква" as param_value , "отдел" as param_name
+id, "банан" as param_value , "сорт" as param_name
+id, "кокос" as param_value , "изделие" as param_name
+```
+Делается это следующим образом
 
 ```
 SET varDelimiter = ',';
@@ -62,3 +71,7 @@ WHILE ITERNO() <= SUBSTRINGCOUNT(список, '$(varDelimiter)') + 1;
 
 DROP TABLE tablename;
 ```
+
+Результат
+
+![image](https://user-images.githubusercontent.com/8188055/189704504-eb483c21-a8db-4d03-8ad2-55dfa651272b.png)
