--- a/functions/Как из поля со списком сделать строки.md
+++ b/functions/Как из поля со списком сделать строки.md
@@ -17,9 +17,8 @@ LOAD * INLINE
 newtable:
 LOAD
     id
-    , SUBFIELD(список, '$(varDelimiter)', ITERNO() ) as значение
-RESIDENT tablename
-WHILE ITERNO() <= SUBSTRINGCOUNT(список, '$(varDelimiter)') + 1;
+    , SUBFIELD(список, '$(varDelimiter)') as значение
+RESIDENT tablename;
 
 DROP TABLE tablename;
 ```
@@ -60,14 +59,13 @@ LOAD * INLINE
 newtable:
 LOAD
 	id
-    , SubField(строка, ':', iterno()) as param_name
-    , SubField(строка, ':', iterno()+1) as param_value
-WHILE ITERNO() <= SUBSTRINGCOUNT(строка, '$(varDelimiter2)');
+    , SubField(строка, '$(varDelimiter2)') as param_name
+    , SubField(строка, '$(varDelimiter2)') as param_value
+    ;
 LOAD
     id
-    , SUBFIELD(список, '$(varDelimiter)', ITERNO() ) as строка
-RESIDENT tablename
-WHILE ITERNO() <= SUBSTRINGCOUNT(список, '$(varDelimiter)') + 1;
+    , SUBFIELD(список, '$(varDelimiter)') as строка
+RESIDENT tablename;
 
 DROP TABLE tablename;
 ```
