добавил строки для SubField

--- a/functions/Как из поля со списком сделать строки.md
+++ b/functions/Как из поля со списком сделать строки.md
@@ -59,8 +59,8 @@ LOAD * INLINE
 newtable:
 LOAD
 	id
-    , SubField(строка, '$(varDelimiter2)') as param_name
-    , SubField(строка, '$(varDelimiter2)') as param_value
+    , SubField(строка, '$(varDelimiter2)',1) as param_name
+    , SubField(строка, '$(varDelimiter2)',2) as param_value
     ;
 LOAD
     id
