Update Получение уникальных значений из таблицы.md
добавил картинок

--- a/functions/Получение уникальных значений из таблицы.md
+++ b/functions/Получение уникальных значений из таблицы.md
@@ -16,20 +16,31 @@
 ```
 Call GetUniqueValues('VALUE', 'TEMP_Max_Value', 'MaxValue', 'Max(Num({expression}))');
 ```
+![image](https://user-images.githubusercontent.com/8188055/207596502-6f3f64a9-3897-4aa5-882b-79445eae8e47.png)
+
 Получить максимальное значение из поля **VALUE**, поместить его в поле **MinValue** в таблицу **TEMP_Min_Value** и записать значение в переменную **varMinValue**
 ```
 Call GetUniqueValues('VALUE', 'TEMP_Min_Value', 'MinValue', 'Min(Num({expression}))','varMinValue');
 ```
+![image](https://user-images.githubusercontent.com/8188055/207596544-e570a1cd-dd95-4909-9283-19954c11b0b4.png)
+
+![image](https://user-images.githubusercontent.com/8188055/207596849-3dd8611f-a205-4c7d-9a67-53ead58bfb7b.png)
+
 
 Получить округленные до 0.1 значения из поля **VALUE**, поместить его в поле **RoundValue** в таблицу **TEMP_Round_Value**
 
 ```
 Call GetUniqueValues('VALUE', 'TEMP_Round_Value', 'RoundValue', 'ROUND({expression},0.1)');
 ```
-Получить список всех уникальных значений из поля **ID**, поместить его в поле **IdValue** в таблицу **TEMP_Id** и преобразовать в тип данных **$text**
+![image](https://user-images.githubusercontent.com/8188055/207596611-4eff9add-5669-44b9-90b8-35c6eee687aa.png)
+
+
+Получить список всех уникальных значений из поля **ID**, поместить его в поле **IdValue** в таблицу **TEMP_Id** и преобразовать в тип данных **$text** и **$ascii**
 ```
 Call GetUniqueValues('ID', 'TEMP_Id', 'IdValue', 'TEXT');
 ```
+![image](https://user-images.githubusercontent.com/8188055/207596720-7b10049b-8681-4609-918e-f17d32e09022.png)
+
 
 ## Тестовый набор данных
 ```
